--- a/storymap.ipynb
+++ b/storymap.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 293,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 294,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 295,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 296,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
        "Code Credit                      Appears in credits as \"...code by...\" (or leav...  "
       ]
      },
-     "execution_count": 259,
+     "execution_count": 296,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 297,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +489,7 @@
        "Code Credit                      Appears in credits as \"...code by...\" (or leav...  "
       ]
      },
-     "execution_count": 260,
+     "execution_count": 297,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 298,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 299,
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +743,7 @@
        "5                         NaN  "
       ]
      },
-     "execution_count": 262,
+     "execution_count": 299,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -755,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 300,
    "metadata": {},
    "outputs": [
     {
@@ -768,7 +768,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 263,
+     "execution_count": 300,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 301,
    "metadata": {},
    "outputs": [
     {
@@ -819,7 +819,7 @@
        "            &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width,\n",
        "                initial-scale=1.0, maximum-scale=1.0, user-scalable=no&quot; /&gt;\n",
        "            &lt;style&gt;\n",
-       "                #map_6f33b997c2de34190e27f76ba36d2aa0 {\n",
+       "                #map_8dd95036c568452ead475520ee890324 {\n",
        "                    position: relative;\n",
        "                    width: 100.0%;\n",
        "                    height: 100.0%;\n",
@@ -833,14 +833,14 @@
        "&lt;body&gt;\n",
        "    \n",
        "    \n",
-       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_6f33b997c2de34190e27f76ba36d2aa0&quot; &gt;&lt;/div&gt;\n",
+       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_8dd95036c568452ead475520ee890324&quot; &gt;&lt;/div&gt;\n",
        "        \n",
        "&lt;/body&gt;\n",
        "&lt;script&gt;\n",
        "    \n",
        "    \n",
-       "            var map_6f33b997c2de34190e27f76ba36d2aa0 = L.map(\n",
-       "                &quot;map_6f33b997c2de34190e27f76ba36d2aa0&quot;,\n",
+       "            var map_8dd95036c568452ead475520ee890324 = L.map(\n",
+       "                &quot;map_8dd95036c568452ead475520ee890324&quot;,\n",
        "                {\n",
        "                    center: [35.788094163972815, -75.84518425717633],\n",
        "                    crs: L.CRS.EPSG3857,\n",
@@ -849,25 +849,25 @@
        "                    preferCanvas: false,\n",
        "                }\n",
        "            );\n",
-       "            L.control.scale().addTo(map_6f33b997c2de34190e27f76ba36d2aa0);\n",
+       "            L.control.scale().addTo(map_8dd95036c568452ead475520ee890324);\n",
        "\n",
        "            \n",
        "\n",
        "        \n",
        "    \n",
-       "            var tile_layer_99705685a3e33e87a1f077a61073625f = L.tileLayer(\n",
+       "            var tile_layer_4d0ff5b11d30939182a6911faa04760e = L.tileLayer(\n",
        "                &quot;https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png&quot;,\n",
        "                {&quot;attribution&quot;: &quot;Data by \\u0026copy; \\u003ca target=\\&quot;_blank\\&quot; href=\\&quot;http://openstreetmap.org\\&quot;\\u003eOpenStreetMap\\u003c/a\\u003e, under \\u003ca target=\\&quot;_blank\\&quot; href=\\&quot;http://www.openstreetmap.org/copyright\\&quot;\\u003eODbL\\u003c/a\\u003e.&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 18, &quot;maxZoom&quot;: 18, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
-       "            ).addTo(map_6f33b997c2de34190e27f76ba36d2aa0);\n",
+       "            ).addTo(map_8dd95036c568452ead475520ee890324);\n",
        "        \n",
        "&lt;/script&gt;\n",
        "&lt;/html&gt;\" style=\"position:absolute;width:100%;height:100%;left:0;top:0;border:none !important;\" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe></div></div>"
       ],
       "text/plain": [
-       "<folium.folium.Map at 0x1100a9760>"
+       "<folium.folium.Map at 0x110094a70>"
       ]
      },
-     "execution_count": 264,
+     "execution_count": 301,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -880,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 302,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -900,28 +900,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 303,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/h7/g0xh7yyd0z9czq1gr9n02dd40000gn/T/ipykernel_6715/167751596.py:3: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value 'media/coastal_nc' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
-      "  chapter_df.loc[[0], ['Media Link']] = 'media/coastal_nc'\n",
-      "/var/folders/h7/g0xh7yyd0z9czq1gr9n02dd40000gn/T/ipykernel_6715/167751596.py:5: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value 'Armed Forces Vacation Club' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
+      "/var/folders/h7/g0xh7yyd0z9czq1gr9n02dd40000gn/T/ipykernel_6715/1016319763.py:3: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value 'media/coastal_nc.jpg' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
+      "  chapter_df.loc[[0], ['Media Link']] = 'media/coastal_nc.jpg'\n",
+      "/var/folders/h7/g0xh7yyd0z9czq1gr9n02dd40000gn/T/ipykernel_6715/1016319763.py:5: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value 'Armed Forces Vacation Club' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
       "  chapter_df.loc[[0], ['Media Credit']] = 'Armed Forces Vacation Club'\n",
-      "/var/folders/h7/g0xh7yyd0z9czq1gr9n02dd40000gn/T/ipykernel_6715/167751596.py:7: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value 'https://d25ckoihpsjafc.cloudfront.net/rci-afvc/img/destinations/block_coastal_nc_8.jpg?v=5' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
+      "/var/folders/h7/g0xh7yyd0z9czq1gr9n02dd40000gn/T/ipykernel_6715/1016319763.py:7: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value 'https://d25ckoihpsjafc.cloudfront.net/rci-afvc/img/destinations/block_coastal_nc_8.jpg?v=5' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
       "  chapter_df.loc[[0], ['Media Credit Link']] = 'https://d25ckoihpsjafc.cloudfront.net/rci-afvc/img/destinations/block_coastal_nc_8.jpg?v=5'\n",
-      "/var/folders/h7/g0xh7yyd0z9czq1gr9n02dd40000gn/T/ipykernel_6715/167751596.py:9: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value 'Coastal communities are especially vulnerable to the effects of climate change. Human activities such as the burning of fossil fuels releases greenhouse gasses into the atmosphere. These gasses trap heat in the atmosphere, disrupting global climate patterns. Not all coastal areas are equally impacted by sea level rise. In fact, sea levels rise unevenly and vary from location to location. Flat coastal areas and locations susceptible to tropical storms are especially vulnerable to the powerful effects of sea level rise. The U.S. East Coast is one of these locations, along with others such as the Gulf Coast, islands, and Asia. ' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
+      "/var/folders/h7/g0xh7yyd0z9czq1gr9n02dd40000gn/T/ipykernel_6715/1016319763.py:9: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value 'Coastal communities are especially vulnerable to the effects of climate change. Human activities such as the burning of fossil fuels releases greenhouse gasses into the atmosphere. These gasses trap heat in the atmosphere, disrupting global climate patterns. Not all coastal areas are equally impacted by sea level rise. In fact, sea levels rise unevenly and vary from location to location. Flat coastal areas and locations susceptible to tropical storms are especially vulnerable to the powerful effects of sea level rise. The U.S. East Coast is one of these locations, along with others such as the Gulf Coast, islands, and Asia. ' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
       "  chapter_df.loc[[0], ['Description']] = ch_zero_dscrp\n",
-      "/var/folders/h7/g0xh7yyd0z9czq1gr9n02dd40000gn/T/ipykernel_6715/167751596.py:13: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value 'Hidden' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
+      "/var/folders/h7/g0xh7yyd0z9czq1gr9n02dd40000gn/T/ipykernel_6715/1016319763.py:13: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value 'Hidden' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
       "  chapter_df.loc[[0], ['Marker']] = 'Hidden'\n",
-      "/var/folders/h7/g0xh7yyd0z9czq1gr9n02dd40000gn/T/ipykernel_6715/167751596.py:15: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
+      "/var/folders/h7/g0xh7yyd0z9czq1gr9n02dd40000gn/T/ipykernel_6715/1016319763.py:15: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
       "  chapter_df.loc[[0], ['Marker Color']] = ''\n",
-      "/var/folders/h7/g0xh7yyd0z9czq1gr9n02dd40000gn/T/ipykernel_6715/167751596.py:17: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
+      "/var/folders/h7/g0xh7yyd0z9czq1gr9n02dd40000gn/T/ipykernel_6715/1016319763.py:17: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
       "  chapter_df.loc[[0], ['Location']] = ''\n",
-      "/var/folders/h7/g0xh7yyd0z9czq1gr9n02dd40000gn/T/ipykernel_6715/167751596.py:21: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value 'https://mymodernmet.com/wp/wp-content/uploads/2020/10/usa-sean-conway-vintage-maps-elevation-relief-1.jpg' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
+      "/var/folders/h7/g0xh7yyd0z9czq1gr9n02dd40000gn/T/ipykernel_6715/1016319763.py:21: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value 'https://mymodernmet.com/wp/wp-content/uploads/2020/10/usa-sean-conway-vintage-maps-elevation-relief-1.jpg' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
       "  chapter_df.loc[[0], ['Overlay']] = 'https://mymodernmet.com/wp/wp-content/uploads/2020/10/usa-sean-conway-vintage-maps-elevation-relief-1.jpg'\n"
      ]
     }
@@ -929,7 +929,7 @@
    "source": [
     "## Chapter 0: intro ##\n",
     "# path to the image used for this chapter\n",
-    "chapter_df.loc[[0], ['Media Link']] = 'media/coastal_nc'\n",
+    "chapter_df.loc[[0], ['Media Link']] = 'media/coastal_nc.jpg'\n",
     "# Name of image source\n",
     "chapter_df.loc[[0], ['Media Credit']] = 'Armed Forces Vacation Club'\n",
     "# Link to image\n",
@@ -954,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 304,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -987,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 305,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1020,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 306,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1051,7 +1051,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 307,
    "metadata": {},
    "outputs": [
     {
@@ -1094,7 +1094,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 308,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1120,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 309,
    "metadata": {},
    "outputs": [
     {
@@ -1165,7 +1165,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Climate Change on the Coast</td>\n",
-       "      <td>media/coastal_nc</td>\n",
+       "      <td>media/coastal_nc.jpg</td>\n",
        "      <td>Armed Forces Vacation Club</td>\n",
        "      <td>https://d25ckoihpsjafc.cloudfront.net/rci-afvc...</td>\n",
        "      <td>Coastal communities are especially vulnerable ...</td>\n",
@@ -1276,7 +1276,7 @@
       ],
       "text/plain": [
        "                                     Chapter             Media Link  \\\n",
-       "0                Climate Change on the Coast       media/coastal_nc   \n",
+       "0                Climate Change on the Coast   media/coastal_nc.jpg   \n",
        "1                   Sea Level Rise Scenarios         media/SLR.jpeg   \n",
        "2                         NC Marsh Migration        media/Marsh.gif   \n",
        "3                                   Flooding    media/avg_flood.png   \n",
@@ -1332,7 +1332,7 @@
        "5                       NaN                          NaN  "
       ]
      },
-     "execution_count": 272,
+     "execution_count": 309,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1343,7 +1343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 310,
    "metadata": {},
    "outputs": [],
    "source": [
